Fix navbar and about alignment

--- a/Personal_Portfolio/index.css
+++ b/Personal_Portfolio/index.css
@@ -1,22 +1,50 @@
-body {
+/* Basic Structure */
+
+html {
+    padding: 0;
+    margin: 0;
+    overflow: auto;
+    height: 100%;
+  }
+  
+  body {
     text-align: center;
+    background-color: burlywood;
+  }
+
+
+h1 {
+    font-size: 3vh;
+}
+
+  #navbar {
+    width: 100%;
+    height: 30px;
+    padding-top: 20px;
+  }
+
+  #navbar > a {
+    padding: 30px;
+    float: right;
+
+  }
+
+  #container {
+    width: 100%;
+    position: relative;
+    height: 100vh;
   }
   
   #welcome-section {
+    padding-top: 300px;
+    text-align: center;
     height: 100vh;
-    overflow: auto;
-  }
-  
-  nav {
-    position: fixed;
-    top: 0;
-    left: 0;
+    width: 100%;
   }
   
   @media (max-width: 600px) {
     body {
-      padding: 0;
+      
     }
   }
-  
   
